girls go to venus
to get smarter i think

--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -3,7 +3,7 @@
     THE TRUTH - Mia's EPIC Site
     </title>
 	<meta name="description" content="The truth of Silver ShÃƒâ€šÃ‚Â£ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â£r">
-	<link rel="icon" type="image/png" href="assets/RuinsSilver.png">
+	<link rel="icon" type="image/png" href="assets/favicoskinned.png">
 	<style>
 	@font-face {
 		font-family: silver;
@@ -16,10 +16,11 @@
 		background-image:radial-gradient(#794004 0%, #8e4b05 50%, #ffffff 50%);
 	} */
 	body {
-		background-image:url(assets/truth.png);
-		background-size: 10%;
+		background: #00000000;
 		width: 500px;
 		margin: auto;
+        background-image:url(assets/truth.png);
+		background-size: 10%;
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
@@ -161,7 +162,7 @@
 <br>
 <br>
 <p class="p1">THIS IS THE TRUTH BEHIND SILVER SHORTHAIR</p>
-<p onclick="silly();" class="p2">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR</p>
+<p onclick="silly();" class="p2">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR <br> ****************</p>
 </center>
 <center>
 <div class="coldtruth">
