--- a/unfunny.html
+++ b/unfunny.html
@@ -6,9 +6,9 @@
 	<!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico">-->
 	<style>
 	html, body {margin:0;padding:0; position: relative;}
-	.header {background-image:linear-gradient(#ab0194 , rgba(0, 0, 0, 0))}
+	.header {background-image:linear-gradient(black , rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #550000 )}
-	.ody {background-image: linear-gradient(#ab0100, black);color:#444444}
+	.ody {background-image: linear-gradient(#aaaaaa, black);color:#444444}
 	body {background:black}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
@@ -18,7 +18,7 @@
 	p{color:#550000 }
 	.funnyman{
 		font-size: 500px;
-        filter: saturate(1);
+        filter: saturate(99);
 		text-shadow:
 -10px -10px 0 #000, 10px 10px 0 #000, 10px -10px 0 #ff0000, -10px 10px 0 #ff0000,
 -15.0px -15.0px 0 #000, 15.0px 15.0px 0 #000, 15.0px -15.0px 0 #ff0000, -15.0px 15.0px 0 #ff0000,
@@ -91,7 +91,7 @@
 <center>
 <img src="assets/unfunnycode.png" width="100px"><br><br><br><br><br><br><br><br><br>
 <div class="unfunnyman"></div>
-<div class="funnyman">😡</div><!-- huerotate is bs and doesn't do its job right-->
+<div class="funnyman" title="take this and help us uncover THEREALTRUTH">🙁</div><!-- huerotate is bs and doesn't do its job right-->
 </center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
