--- a/pride.html
+++ b/pride.html
@@ -59,7 +59,7 @@
         position: relative;
         width: 1020px;
         left: -20px;
-        
+        color: white;
         height: 75px;
         font-size: 1.2em;
         cursor: pointer;
