--- a/index.html
+++ b/index.html
@@ -29,19 +29,21 @@
     
     .webring{
         position:relative;
+        /*top: -1;*/
         width: 750px;
-        background-color: black;
-        background-image: url("assets/img/glitter.gif");
+        background: black;
+        /*background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(90,0,60,1) 0%, rgba(103,0,69,1) 8%, rgba(67,0,45,1) 39%, rgba(65,0,43,1) 64%, rgba(58,0,39,1) 75%, rgba(121,0,81,1) 82%, rgba(192,0,129,1) 90%, rgba(255,0,172,1) 100%);*/
+        /*background-image: url("assets/img/glitter.gif");*/
         color: white;
         padding: 5px 100px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        border-radius: 10px;
-        border-style: none none solid none;
-        border-width: 5px;
-        border-color: black;
-        transition: border-width 0.1s, top 0.1s;    
+        border-radius: 0px 0px 10px 10px;
+        border-style: solid none none none;
+        border-width: 10px;
+        border-color: #bc0202;
+        /*transition: border-width 0.1s, top 0.1s;    */
     }
     .a2{
         position:relative;
@@ -118,8 +120,7 @@
         bottom:10px;
         z-index:500;
 		border-radius: 0px 0px 25px 25px;
-		padding-top: 1px;
-		padding-bottom: 10px;
+        padding: 0px 5px 15px 5px;
         border-style: none none solid none;
         border-width: 10px;
         border-color: #bc0202;
