--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	title()
 	</script>
 	<style>
+
 	html, body {margin:0;padding:0; background:#000; color:#ffffff;}
 	.header {background-image:linear-gradient(#bf0000, rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #000)}
@@ -195,6 +196,8 @@ css <s>coming soon</s> WIP
   <tr><th>31/10/2022</th><td>-</td><td><span title='🙂'>Oh God hes alive</span></td></tr>
   <tr><th>1/11/2022</th><td>-</td><td><span title='my birthday oh My godnes'>completely revamped games.html and index.html!!!!! (this page!!!)</span></td></tr>
   <tr><th>19/03/2023</th><td>-</td><td><span>10 new secret pages, 10 changed pages (as of 3/18/23 thats when im writing this lmfao) complete rethingy of aboutthem, update to CSS of index.html and code.html and uh yea, also made this news section look cooler and supports updates having multiple lines now. <s>also, i now discovered the power of <i>gentrification de la humorousity</i> and will abuse it :)</s> UPDATE: please let me talk to big CSS, 😡</span></td></tr>
+  <tr><th>20/08/2023</th><td>-</td><td><span>minor changes also uwu owo aboutme redesign owO and some pride.html additions</span></td></tr>
+  <tr><th>24/08/2023</th><td>-</td><td><span>new cool page destroyer on code.html (it rotates every single element)</span></td></tr>
   <tr><th></th><td></td><td></td></tr>
   </table>
 </div>
