aboutme shrink ray and butter

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,13 +7,13 @@
 	console.log("%cwhy are you so silly!?!?!?", "font-size:4rem;background-image: repeating-linear-gradient(45deg,#55CDFC,#55CDFC 50px,#F7A8B8 50px,#F7A8B8 100px,#FFFFFF 100px,#FFFFFF 150px,#F7A8B8 150px,#F7A8B8 200px,#55CDFC 200px);");
 	</script>
 	<style>
-	html, body {margin:0;padding:0;background:#111111;}
+	html, body {margin:0;padding:0;background-color: black;background-image:url('assets/eyes2.png');}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
 	.footer {height:250px; background-image:linear-gradient(190deg, #FFFFFF00,#FFFFFF00,#000),linear-gradient(170deg, #FFFFFF00,#FFFFFF00,#000);}
 	.footer2 {height:250px;background-image:linear-gradient(180deg, #FFFFFF00,#FFFFFF00,#F00);z-index:-10;}
 	.bodysuit {
         position: relative;
-        width: 1500px;
+        width: 1300px;
         margin: auto;
         padding-top: 5px;
 		background-image: 
@@ -111,8 +111,20 @@
         width:250px;
         position: absolute;
         left: 200px; 
-        top: 200px;
+        top: 220px;
         transform: rotate(5deg);
+    }
+    .bt{
+        font-size: 40px;
+        background: yellow;
+        color: black;
+        text-decoration: none;
+        border-radius: 15px;
+        width:250px;
+        position: absolute;
+        left: 10px; 
+        top: 400px;
+        transform: rotate(-2deg);
     }
     .tm{
         font-size: 40px;
@@ -157,7 +169,8 @@
 <p class="p1">Thats all you need to know ig</p>
 <div class="yt"><a class="yt" href="https://www.youtube.com/@miastonished"> My Youtube </a></div>
 <div class="tm"><a class="tm" href="https://miastonished.tumblr.com/"> My Tumblr </a></div>
-<!--<div class="secrets"><a class="secrets" href="secrets.html"> My Seçrets </a></div>-->
+<div class="bt"><a class="bt" href="butter.png"> Butter Images </a></div>
+<!--<div class="secrets"><a class="secrets" href="secrets.html"> My Seçr<span id="glitche">e</span>ts </a></div>-->
 <!-- add in later -->
 
 <!--
