--- a/index.html
+++ b/index.html
@@ -198,16 +198,18 @@ css <s>coming soon</s> WIP
   <tr><th>19/03/2023</th><td>-</td><td><span>10 new secret pages, 10 changed pages (as of 3/18/23 thats when im writing this lmfao) complete rethingy of aboutthem, update to CSS of index.html and code.html and uh yea, also made this news section look cooler and supports updates having multiple lines now. <s>also, i now discovered the power of <i>gentrification de la humorousity</i> and will abuse it :)</s> UPDATE: please let me talk to big CSS, 😡</span></td></tr>
   <tr><th>20/08/2023</th><td>-</td><td><span>minor changes also uwu owo aboutme redesign owO and some pride.html additions</span></td></tr>
   <tr><th>24/08/2023</th><td>-</td><td><span>new cool page destroyer on code.html (it rotates every single element)</span></td></tr>
+  <tr><th>25/08/2023</th><td>-</td><td><span><span title='its not secret so i cant call it that'>+1 bonus page</span>, still working on aboutme.html it was too big imo so im shrinking it</span></td></tr>
   <tr><th></th><td></td><td></td></tr>
   </table>
+  
 </div>
 <div class="footer">
 <div class="bottom">
 <h3>-- NOTES FOR THE SITE --</h3>
-This site is best viewed on desktop. Certain things don't look good on mobile<br>
-<span title="but you can look at the console log thingy thats fine :grin:">Viewing the HTML is not a way to find secrets</span><br>
+This site is best viewed on desktop. Most of it looks horrible on mobile<br>
+<span title="but you can look at the console log thingy thats fine :grin:">Don't look at the HTML in inspect element it will spoil secrets for you and doesn't hide anything useful</span><br>
 <!-- I'm being serious -->
-Bugs and stuff can be reported to me (Contact is on about me)<br>
+Bugs and stuff can be reported to me (Contact is on about me (not yet im working on it))<br>
 <span id="farty" title="like hovering over certain text 😲">Some secrets are hidden very sneakily</span>
 
 <br>
