--- a/index (2).html
+++ b/index (2).html
@@ -13,10 +13,9 @@
 	<style>
 
 	html, body {margin:0;padding:0; background:#000; color:#ffffff;}
-	.header {background-image:linear-gradient(#af0000, rgba(0, 0, 0, 0))}
+	.header {background-image:linear-gradient(#bf0000, rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #000)}
-    
-	.contentyay {background-color:#500000;color:#ffffff;}
+	.contentyay {background-color:#800000;color:#ffffff;}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: right;font-weight: normal}
 	a{
@@ -143,14 +142,6 @@
 		padding-top: 1px;
 		padding-bottom: 10px;
 	}*/
-
-    img{
-        image-rendering: -moz-crisp-edges;
-        image-rendering: -o-crisp-edges;
-        image-rendering: -webkit-optimize-contrast;
-        image-rendering: pixelated;
-        -ms-interpolation-mode: nearest-neighbor;
-    }
 	</style>
 </head>
 <body>
@@ -158,7 +149,7 @@
 <div class="header">
 	<center>
 	<div class="menu">
-		<h1 id="haiix3">hi</h1>
+		<h1>hi</h1>
 	<span id="menulinks">idex dot html</span>
 	<script src="links.js" type="text/javascript"></script>
 	</div>
@@ -171,10 +162,13 @@
 
 <div class="linkies"> 
 <span href="webring.html" class="webring">
-<!--
-<img src="assets/art/placeholderbutton.gif" height="155px" width="440px"/>
--->
-webring links <s>css</s> coming soon <s>WIP</s>
+<img src="assets/art/banner.png" height="75px" width="600px"/>
+
+<br>
+
+<a class="a2">[prev]</a>
+<a class="a2">[next]</a>
+<a class="a2">[all]</a>
 
 </span> 
 </div>
@@ -238,9 +232,6 @@ if u cant see this u need to check ur eyes
 	var farty = document.getElementById("farty");
 	farty.innerHTML = "Some secrets are hidden very sneakily (Like waiting a while on a page lmfao)";
 	}, "30000");
-    function silly(){
-        document.getElementById('haiix3').innerHTML = "<img src='assets/art/header.png'/><br>"
-    }
 </script>
 </div>
 </body>
