--- a/cuddles.html
+++ b/cuddles.html
@@ -56,6 +56,15 @@
 
 <div class="fart">
 <script>
+
+function a25pZmU(){
+    alert('you stab him...');
+    let stateObj = { id: "100" }; 
+            window.history.replaceState(stateObj, 
+                        "Page 3", "/what have you done...");
+}
+ 
+                        
 function squiggle(){
     setTimeout(() => { document.getElementById("needyour").src = "assets/art/needyour2.png"}, "200");
     setTimeout(() => { document.getElementById("needyour").src = "assets/art/needyour.png"}, "400");
