massive update yolo release

--- a/040.html
+++ b/040.html
@@ -5,6 +5,10 @@
 	<meta name="description" content="🙂 Do yOu Like the Fuinny Men? 🙂">
 	<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 	<style>
+    @font-face {
+        font-family: funny;
+        src: url('assets/funny.ttf');
+    }
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#550000 , rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #550000 )}
