--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
 </div>
 <a href="https://miastonished.github.io/"> you're a 404 ;( </a>
 <br><br>
-<a href="040.html"> Now Learn </a>
+<h1><a href="040.html"> Now Learn </a><h1>
 <br>
 <div class="funnyman">
 <div class="nym">😶</div>
