--- a/444.html
+++ b/444.html
@@ -74,6 +74,17 @@
 <br><br>
 <a href="040.html"> Or face denial </a>
 <br>
+<br>
+<h1> MyHere is the PasswordREQUIREDto :</h1>
+<h1>Accss the docuMents they have   HIDDEN from us</h1>
+<h1> HelpUsFind and DEstroy the Propagan-5Da</h1>
+<br>
+<h1><a href='javascript:boogie();'> INGRATIATING </a></h1>
+
+
+<br>
+
+
 <div class="funnyman">
 <div class="nym">🔴</div>
 <div class="fun">😢</div>
@@ -111,6 +122,6 @@ function plastic(){
 console.log('%cfrog breath deep death, neck p', 'color:#ffc83d;font-size:100px;background-color:black');
 </script>
 </div>
-<p>don't destroy your </p>
+<p>don't destroy y our image challenge </p>
 </center>
 </body>
