--- a/Laugh.html
+++ b/Laugh.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="🙂 Do yOu []][[[] the Fuinny Men? 🙂🙂">
 	<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 	<style>
-	html, body {margin:0;padding:0;}
+	html, body {margin:0;padding:0; font-family:Arial;}
 	.header {background-image:linear-gradient(#000000 , rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #550000 )}
 	body {color: #ffffff;background-image: url('http://dl10.glitter-graphics.net/pub/481/481810guaa5hwxt9.png');background-attachment: fixed;background-repeat: repeat;}
@@ -38,6 +38,27 @@
 		max-height: 10px;
 		background-image: url(assets/img/youfunnymanyouf.gif);
 	}
+    .related{
+        background: blue;
+        width: 400px;
+        padding: 10px;
+        box-shadow: 
+            10px 10px 0px blue,
+            -10px -10px 0px blue,
+            -20px 20px 0px red,
+            20px -20px 0px red,
+            -30px -30px 0px blue,
+            30px 30px 0px blue,
+            30px -30px 0px blue,
+            -30px 30px 0px blue
+            
+        ;
+        border: solid red 10px;
+    }
+    .related > a {
+        color: red;
+        background: black;
+    }
 	</style>
 </head>
 <body>
@@ -57,7 +78,17 @@
 	<br>
 </div>
 <a href="Laugh.html">Rapid DeCONstruction</a><br>
-Keep Him #Relevant <br>
+Keep Him #Relevant <br><br><br>
+<div class='related'>
+<h2> RELATED ARTICLES: </h2>
+<a href='https://web.archive.org/web/20210302043648/https://www.lorecentral.org/2018/10/emperor-syndrome-when-the-child-imposes-his-law.html'>Emperor Syndrome: When the Child Imposes His Law</a>
+<br><br>
+<a href=''></a>
+<br><br>
+
+
+</a>
+<br><br>
 <img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br>
 <img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br>
 <img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br>
@@ -65,7 +96,10 @@ Keep Him #Relevant <br>
 <img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br>
 <img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br>
 <img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br>
-<img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br><br>
+<img src="assets/img/youfunnymanyouf.gif" width="300px" height="40px"/><br>
+</div>
+
+<br>
 <!--<script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/3140_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"🙂","geo":"","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"q=%F0%9F%99%82&date=today 12-m","guestPath":"https://trends.google.com:443/trends/embed/"}); </script>
 stupid google thing lags out browser-->
 
@@ -85,4 +119,7 @@ stupid google thing lags out browser-->
 <a href="cantremember.html">of the )))MIND</a><br>
 <img src="assets/img/car.gif" width="100%" height="100px"/>
 </center>
+<div style='background:black'>
+<a href='https://web.archive.org/web/20230315063154/http://s860649040.onlinehome.us/'>How to convert to a belief in The Funny Man
+</div>
 </body>
