--- a/abouthim.html
+++ b/abouthim.html
@@ -27,7 +27,7 @@
     evilmfao();
 </script>
 	<style>
-	html, body {margin:0;padding:0;}
+	html, body {margin:0;padding:0; overflow-x:hidden; background-color: black;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
 	.footer {background-image:linear-gradient(195deg, #FFFFFF00,#FFFFFF00,#000),linear-gradient(165deg, #FFFFFF00,#FFFFFF00,#000);}
 	.footer2 {background-image:linear-gradient(180deg, #FFFFFF00,#FFFFFF00,#F00);z-index:-10;}
@@ -194,9 +194,37 @@
 	.Squishy {
 		font-size: 20px;
 	}
+    .void{
+        background-color: #000000;
+        color: white;
+        width: 175px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        border-radius: 10px;
+        box-shadow: 
+            0px 0px 50px black,
+            0px 0px 50px black,
+            0px 0px 50px black,
+            0px 0px 50px black,
+            0px 0px 50px black,
+            0px 0px 50px black,
+            0px 0px 50px black,
+            0px 0px 50px black,
+            0px 0px 50px black;   
+    }
+    .void2{
+        position: absolute;
+        transform: rotate(90deg);
+        top: 0px;
+        left: 0px;
+    }
+    .voidcontain{positon: relative; background: #fff0; padding: 1px; width:177px;}
 	</style>
 </head>
-
+<body>
 <div> <!--class="header"--->
 	<br>
 	<center>
@@ -264,11 +292,11 @@ AUDI_!))!
 <p class="Squishy">PEOPLE WHO ___ MY VIDEOS! !! ! ! ! ! </p>
 <span title="who am i kidding this is just me lmao"><a href="https://miastonished.github.io/">M</a>IA! ! ! ! (Poopy And Poo)</span>
 <br>
-<a href="https://silvershorthair.github.io/">Siler</a> ! <a href="https://twitter.com/SilverPaperCat">Silve</a>R <a href="https://www.youtube.com/channel/UCGkq3rsguMgb0eWj-hSInYg">Shorthair!</a> (Good job You <a href="https://miagaming.itch.io/findthesilver">. . . .</a>Her )
+<a href="https://silvershorthair.github.io/">Siler</a> ! <a href="https://www.tumblr.com/silvershorthair/">Silve</a>R <a href="https://www.youtube.com/channel/UCGkq3rsguMgb0eWj-hSInYg">Shorthair!</a> (Good job You <a href="https://miagaming.itch.io/findthesilver">. . . .</a>Her )
 <br>
 <a href="https://batashock.github.io/">Bana</a>s<a href="https://www.youtube.com/channel/UCSQFo-M3dMZHmeQNDFS00Ug">hock</a> (So Squishy!) 
 <br>
-<a href="https://soundcloud.com/will917">9</a>17 (does the Audio  ! ! ! ! )
+<a href="https://soundcloud.com/silly917">9</a>17 (does the Audio  ! ! ! ! )
 <br>
 <a href="https://www.youtube.com/channel/UCg9nwMZIei3ezCekyXco31g/about">Forever TWO!</a> ! !! ! (Thats So many <a href="https://forevertoo.me/">Forevers!</a> I wasN't Eve n Done with the <a href="forever.html">Last One!</a>)
 <br>
@@ -324,3 +352,12 @@ Your browser does not support the silliest element.</center>
 <script>
 document.getElementById('funnyha').autoplay = true;
 </script>
+<div style='height: 100px;'></div>  
+
+    <div class='voidcontain'>
+        <a href='voidrelocator.html' class='void'> VOID </a>
+        <a href='voidrelocator.html' class='void2 void'>VOID</a>
+    </div>
+    
+<div style='height: 100px;'></div>  
+</body>
