--- a/aboutthem.html
+++ b/aboutthem.html
@@ -312,6 +312,9 @@ WATCH THE NEW STAR DANCE UPON THE NIGHT SKY<br>
 <br>
 <br>
 <br><br>
+<a href=http://www.glitter-graphics.com title='Myspace Graphics'><img
+src=http://dl4.glitter-graphics.net/pub/63/63374ve1j3xxem0.jpg width=400
+height=118 alt='myspace layouts, myspace codes, glitter graphics' border=0></a>
 <br><br><br>
 </div>
 </div> 
