--- a/core.html
+++ b/core.html
@@ -28,7 +28,7 @@ const redirects = [
   "https://www.youtube.com/c/MattRoseStuff",
   "15infantry.php",
   "https://www.reddit.com/r/KGATLW/",
-  "file:///C:/",
+//  "file:///C:/",
 //  "chrome://dino/",
   "https://tcrf.net/images/c/c9/HPSSWin-harhar.png",
   "https://www.webmd.com/urinary-incontinence-oab/ss/slideshow-incontinence-frequent-pee",
@@ -46,10 +46,18 @@ const redirects = [
   "https://www.the-crossword-solver.com/word/very+silly",
   "https://www.danword.com/crossword/Very_silly",
   "https://crosswordgenius.com/clue/very-silly",
-  "https://www.wordplays.com/crossword-solver/very-silly"
+  "https://www.wordplays.com/crossword-solver/very-silly",
+  "https://soundcloud.com/silly917/rain/",
+  "https://soundcloud.com/silly917/rain/",
+  "https://www.java.com/en/download/help/disable_browser.html",
+  "https://google.com/search?=do+a+brarrel+roll",
+  "https://www.google.com/search?q=https%253A%252F%252Fmiastonished.github.io",
+  "https://gumi.gay",
+  "maggots.html",
+  "butter.png"
 ];
 min = Math.ceil(0);
-max = Math.floor(35);
+max = Math.floor(redirects.length);
 fart2 = Math.floor(Math.random() * (max - min) + min);
 fart = redirects[fart2];
 window.location.replace(fart);
