--- a/disease.html
+++ b/disease.html
@@ -44,8 +44,8 @@
 <div class="header">
 	<br>
 	<center>
-	<h1> The hint is: _STARE_ </h1>
-	<span id="menulinks" class="blocked"> they4re in our mind</span>
+	<h1><!-- The hint is: _STARE_-->watching</h1>
+	<span id="menulinks" class="blocked"> they4re in our mind</span> ​ ​ <a class='links' href='bob.html'>Article</a>
 	<script src="links.js" type="text/javascript"></script><br><br>
 	<!--<marquee scrollamount="100">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
 	<marquee scrollamount="99">AVENGE U+1F643 SMILING ELITE FACE // CALL (XXX)-XXXX-XXX OR EMAIL SILVER (AT) RELIGIOUS (DOT) COM // AVENGE HIM NOW-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-</marquee>
