--- a/doors.html
+++ b/doors.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <head>
 	<title>
 	???
     </title>
 	<meta name="description" content="???">
-	<meta name="author" content="???">
+	<meta name="okkokokokok" content="???">
 	<meta name="author" content="John Doe">
 	<style>
 	@keyframes drippingtapkinggizzard {
@@ -11,7 +12,7 @@
 		50% {backdrop-filter: hue-rotate(360deg);}
 		to {backdrop-filter: hue-rotate(0deg);}
 	}
-	html, body {margin:0;padding:0;}
+	html, body {margin:0;padding:0;height: 100%;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
 	body {
@@ -42,9 +43,11 @@
 		background-color: #00000000;
 		text-align: center;
 		width: 400px;
+        height: 400px;
 	}
 	.doors{
 		position: absolute;
+        margin: auto;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
@@ -65,7 +68,7 @@
 <br>
 <br>
 <br>
-<div class="GamesPLAS">
+<div class="">
 <script>
 var n = 1;
 function aaa(){
@@ -111,9 +114,17 @@ function takeashit(x){
 <div class="doors">
 <table>
 	<tr>
-	<td><img src="assets/doors/door0001.png" width="100%" height="100%" onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" onclick="takeashit(this);"/></td>
-	<td><img src="assets/doors/door0001.png" width="100%" height="100%" onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" onclick="takeashit(this);"/></td>
-	<td><img src="assets/doors/door0001.png" width="100%" height="100%" onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" onclick="takeashit(this);"/></td>
+	<td>
+        <img src="assets/doors/door0001.png" width="100%" height="100%" onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" onclick="takeashit(this);"/>
+    </td>
+    
+	<td>
+        <img src="assets/doors/door0001.png" width="100%" height="100%" onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" onclick="takeashit(this);"/>
+    </td>
+    
+	<td>
+        <img src="assets/doors/door0001.png" width="100%" height="100%" onmouseover="farton(this);" onmouseout="suckfartsoutof(this);" onclick="takeashit(this);"/>
+    </td>
 	</tr>
 </table>
 </div>
