--- a/indexxx.html
+++ b/indexxx.html
@@ -60,7 +60,8 @@ css <s>coming soon</s> WIP
 
   
   
-if u cant see thiiiiiiiiiiiiiiiiiiPULL OUT ur eyes
+if u cant see thiiiiiiiiiiiiiiiiiiPULL OUT ur eyes<br>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RtAGKMsnum0?si=HPYf5ib8CSq57T0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <p class="white">the former gods command you to persevere]]]</p>
 </center>
 <p class="white">its not where we know but hereTHEYSKINNEDMEALIVE</p>
