--- a/scrap.html
+++ b/scrap.html
@@ -103,7 +103,7 @@
 	}	
 	</style>
 	<script>
-	confirm("Hello can you \"Please\" Join my Gift Crad GiverWay?!");
+	//confirm("Hello can you \"Please\" Join my Gift Crad GiverWay?!");
 	confirm("this Page contains Flashing Lights!!!!!!!! Whoops!");
 	function farton(x){
 		x.src = "assets/art/silverad2.png";	
