--- a/Timer.html
+++ b/Timer.html
@@ -235,6 +235,7 @@
 <div class="Silly2"></div>
 <div class="Silly3"></div>
 <div class="Silly2"></div>
+Bob was here
 <div class="Silly3"></div>
 <div class="Silly4"></div>
 <div class="Silly5"></div>
