--- a/code.html
+++ b/code.html
@@ -175,7 +175,7 @@ stuff to embed on you're site!!!!!!!!!!!!!! :333
 fun
 </a>-->
 <br>
-put this at the bottom of your site :3
+put this at the <b>bottom</b> of your site :3
 <pre><div class="codebox" id="c3">&lt;script onload='fts(1);' src='https://miastonished.github.io/fts.js'&gt;&lt;/script&gt;</div></pre>
 <details><summary>the 1 in fts(1); is the amount of silvers :3333</summary><br>
 17/11/23 - released <br>
