--- a/buttons.html
+++ b/buttons.html
@@ -138,6 +138,7 @@ in the future when i collect more buttons i'll sort them by colour :3333<br><br>
 <a href="https://kulijo.neocities.org/" target="_blank"> <img src="https://kulijo.neocities.org/images/buttons/button2.gif"></a>
 <a href="https://muncee.neocities.org/"><img src="assets/buttons/hzrn.gif"></a>
 
+<a href="https://committy.glitch.me"><img src="https://sbig2023-committy.glitch.me/assets/img/committy_button.jpg"></a>
 <a class=' emptbutt' href='https://' target='_blank'></a>
 <a class=' emptbutt' href='https://' target='_blank'></a>
 <a class=' emptbutt' href='https://' target='_blank'></a>
